kubernetes/apps/IGA/midpoint/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: midpoint
spec:
  replicas: 1
  serviceName: midpoint-svc
  selector:
    matchLabels:
      app.kubernetes.io/instance: midpoint
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 10
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: midpoint
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: midpoint
        image: evolveum/midpoint:4.9
        ports:
        - name: gui
          containerPort: 8080
          protocol: TCP
        volumeMounts:
        - name: midpoint-home
          mountPath: /opt/midpoint/var
        - name: init-log-volume
          mountPath: /var/local/logs
      volumes:
      - name: init-log-volume
        emptyDir: {}
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      name: midpoint-home
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
