kubernetes/apps/IGA/midpoint/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: midpoint-svc
spec:
  selector:
    app.kubernetes.io/instance: midpoint
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
